[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/kenney_top-down-shooter/PNG/Robot 1/robot1_machine.png" type="Texture" id=1]
[ext_resource path="res://kill_order.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 9.0

[node name="kill_order" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Robot1Machine" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="run_timer" type="Timer" parent="."]
autostart = true

[node name="stop_running" type="Timer" parent="."]
wait_time = 1.2

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -24, 17 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( -24, -19 )

[connection signal="timeout" from="run_timer" to="." method="_on_run_timer_timeout"]
[connection signal="timeout" from="stop_running" to="." method="_on_stop_running_timeout"]
